--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <title>itprofit</title>
   </head>
   <body>
-    <div class="hidden message message-success">Success</div>
+    <div class="hidden message">Success</div>
 
     <button class="btn btn-modal">Modal</button>
 
